marking quantum-safe cryptography

--- a/learning/courses/quantum-safe-cryptography/index.mdx
+++ b/learning/courses/quantum-safe-cryptography/index.mdx
@@ -24,15 +24,15 @@ PDFs of lecture notes will be available soon
 
 ### Further reading
 
-- [Basics of quantum information](/learning/courses/basics-of-quantum-information/index) which offers an introduction to principles of quantum information and computation
-- [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index) which explores computational advantages of quantum systems, and includes further details on algorithms such as Grover's algorithm
-- [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe)
+- [Basics of quantum information](/learning/courses/basics-of-quantum-information/index), which offers an introduction to principles of quantum information and computation
+- [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index), which explores computational advantages of quantum systems, and includes further details on algorithms such as Grover's algorithm
+- [IBM Quantum Safe&trade;](https://www.ibm.com/quantum/quantum-safe)
 - [Why it’s time to take quantum-safe cryptography seriously](https://research.ibm.com/blog/quantum-safe-cryptography-for-industry)
 - [Fundamentals of Encryption & Quantum-Safe Techniques](https://catalog.skills.network/2766)
 
 ## Exam
 
-To earn your Quantum-safe cryptography badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+To earn your Quantum-safe cryptography badge, take the exam at IBM&reg; Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-safe-cryptography/exam)
 
