--- a/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
+++ b/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
@@ -88,4 +88,4 @@ covered in this course. You may wish to download so you can refer to it at a lat
 Further courses are being developed which will follow on from this introduction and will cover topics including:
 - Using quantum-safe encryption in practice
 - Open-source libraries
-- IBM product offerings that can help
+- IBM&reg; product offerings that can help
