marking utility-scale course

--- a/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
@@ -500,7 +500,7 @@
    "source": [
     "The new synthesis produces a shallower circuit. Why?\n",
     "\n",
-    "This is because the new circuit can be laid out on linearly connected qubits, so on IBM Kyiv's heavy-hexagon coupling graph as well, while the original circuit requires star-shaped connectivity (a degree-4 node) and hence cannot be laid out on the heavy-hex coupling graph, which has nodes at most degree 3. As a result, the original circuit requires qubit routing that adds SWAP gates, increasing the gate count.\n",
+    "This is because the new circuit can be laid out on linearly connected qubits, so on IBM&reg; Kyiv's heavy-hexagon coupling graph as well, while the original circuit requires star-shaped connectivity (a degree-4 node) and hence cannot be laid out on the heavy-hex coupling graph, which has nodes at most degree 3. As a result, the original circuit requires qubit routing that adds SWAP gates, increasing the gate count.\n",
     "\n",
     "What we have done in the new circuit can be seen as a manual \"coupling constraint-aware\" circuit synthesis. In other words: manually solving circuit synthesis and circuit mapping at the same time."
    ]
