--- a/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
@@ -1273,7 +1273,7 @@
    "id": "9b3dbd44-61df-4838-9bdc-d36d6fba5881",
    "metadata": {},
    "source": [
-    "You can also check the job status from your [IBM Quantum dashboard.](https://quantum.cloud.ibm.com/workloads)"
+    "You can also check the job status from your [IBM Quantum&reg; dashboard.](https://quantum.cloud.ibm.com/workloads)"
    ]
   },
   {
