variational-algo course marking

--- a/learning/courses/variational-algorithm-design/index.mdx
+++ b/learning/courses/variational-algorithm-design/index.mdx
@@ -11,7 +11,7 @@ This course is intended for individuals who have some experience with quantum co
 
 ## Exam
 
-To earn your badge for Variational algorithm design, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+To earn your badge for Variational algorithm design, take the exam at IBM&reg; Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/variational-algorithm-design/exam)
 
