marking in tutorials

--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "* Qiskit SDK v1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
     "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
-    "* Qiskit IBM Transpiler (`pip install qiskit-ibm-transpiler`)\n",
+    "* Qiskit IBM&reg; Transpiler (`pip install qiskit-ibm-transpiler`)\n",
     "* Qiskit IBM AI Local Transpiler (`pip install qiskit_ibm_ai_local_transpiler`)"
    ]
   },
