--- a/docs/tutorials/long-range-entanglement.ipynb
+++ b/docs/tutorials/long-range-entanglement.ipynb
@@ -13,7 +13,7 @@
     "{/* cspell:ignore XIXI, IZIZ, XZXZ, YZYI, ZZZI, YIYZ, ZIZZ, IXXX, XYIY, IYXY, ZYYX, YYZX, ZXYY, YXZY, quasidistillation */}\n",
     "\n",
     "# Long-range entanglement with dynamic circuits\n",
-    "*Usage estimate: 16 seconds on IBM Pittsburgh (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 16 seconds on ibm_pittsburgh (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
