--- a/docs/tutorials/nishimori-phase-transition.ipynb
+++ b/docs/tutorials/nishimori-phase-transition.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Nishimori phase transition\n",
-    "*Usage estimate: 3 minutes on IBM Torino (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 3 minutes on ibm_torino (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "## Background\n",
-    "This tutorial demonstrates how to realize a Nishimori phase transition on an IBM quantum processor. This experiment was originally described in [*Realizing the Nishimori transition across the error threshold for constant-depth quantum circuits*](https://arxiv.org/abs/2309.02863).\n",
+    "This tutorial demonstrates how to realize a Nishimori phase transition on an IBM&reg; quantum processor. This experiment was originally described in [*Realizing the Nishimori transition across the error threshold for constant-depth quantum circuits*](https://arxiv.org/abs/2309.02863).\n",
     "\n",
     "The Nishimori phase transition refers to the transition between short- and long-range ordered phases in the random-bond Ising model. On a quantum computer, the long-range ordered phase manifests as a state in which qubits are entangled across the entire device. This highly entangled state is prepared using the *generation of entanglement by measurement* (GEM) protocol. By utilizing mid-circuit measurements, the GEM protocol is able to entangle qubits across the entire device using circuits of only constant depth. This tutorial uses the implementation of the GEM protocol from the [GEM Suite](https://github.com/qiskit-community/gem-suite) software package."
    ]
@@ -71,7 +71,7 @@
     "\n",
     "In the GEM Suite software package, the fundamental class for implementing the GEM protocol is `PlaquetteLattice`, which represents the lattice of plaquettes (which is distinct from the heavy hex lattice). A `PlaquetteLattice` can be initialized from a qubit coupling map. Currently, only heavy hex coupling maps are supported.\n",
     "\n",
-    "The following code cell initializes a plaquette lattice from the coupling map of a IBM Quantum processor. The plaquette lattice does not always encompass the entire hardware. For example, `ibm_torino` has 133 total qubits, but the largest plaquette lattice that fits on the device uses only 125 of them, and comprises a total of 18 plaquettes. Similar can be observed for IBM Quantum devices with different qubit counts as well."
+    "The following code cell initializes a plaquette lattice from the coupling map of a IBM quantum processor. The plaquette lattice does not always encompass the entire hardware. For example, `ibm_torino` has 133 total qubits, but the largest plaquette lattice that fits on the device uses only 125 of them, and comprises a total of 18 plaquettes. Similar can be observed for IBM Quantum&reg; devices with different qubit counts as well."
    ]
   },
   {
