--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Sample-based Krylov quantum diagonalization of a fermionic lattice model\n",
     "\n",
-    "*Usage estimate: 9 seconds on IBM Aachen (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 9 seconds on ibm_aachen (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -400,7 +400,7 @@
    "id": "a3304e1b-9c7c-4212-8744-d1c62292eced",
    "metadata": {},
    "source": [
-    "Now that we have created the circuits, we can optimize them for a target hardware. We pick the least busy QPU with at least 127 qubits. Check out the [Qiskit IBM Runtime docs](/docs/guides/get-started-with-primitives#get-started-with-sampler) for more information."
+    "Now that we have created the circuits, we can optimize them for a target hardware. We pick the least busy QPU with at least 127 qubits. Check out the [Qiskit IBM&reg; Runtime docs](/docs/guides/get-started-with-primitives#get-started-with-sampler) for more information."
    ]
   },
   {
