--- a/docs/tutorials/approximate-quantum-compilation-for-time-evolution.ipynb
+++ b/docs/tutorials/approximate-quantum-compilation-for-time-evolution.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Approximate quantum compilation for time evolution circuits\n",
-    "*Usage estimate: 5 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 5 minutes on ibm_brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
