--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -15,7 +15,7 @@
    "id": "d08a5e51",
    "metadata": {},
    "source": [
-    "*Estimated QPU usage: 4 minutes on IBM Marrakesh (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Estimated QPU usage: 4 minutes on ibm_marrakesh (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "## Background\n",
     "In this tutorial, you will learn how to use a Multi-Product Formula (MPF) to achieve a lower Trotter error on our observable compared to the one incurred by the deepest Trotter circuit that we will actually execute.\n",
