--- a/docs/tutorials/variational-quantum-eigensolver.ipynb
+++ b/docs/tutorials/variational-quantum-eigensolver.ipynb
@@ -9,7 +9,7 @@
     "{/* cspell:ignore nfev */}\n",
     "\n",
     "# Variational quantum eigensolver\n",
-    "*Usage estimate: 73 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 73 minutes on ibm_kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -702,7 +702,7 @@
   }
  ],
  "metadata": {
-  "description": "Variational quantum algorithms are hybrid-algorithms for observing the utility of quantum computation on noisy, near-term IBM Quantum systems.",
+  "description": "Variational quantum algorithms are hybrid-algorithms for observing the utility of quantum computation on noisy, near-term IBM&reg; quantum computers.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
