--- a/docs/tutorials/probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/probabilistic-error-amplification.ipynb
@@ -10,7 +10,7 @@
     "{/* cspell:ignore mapsto multigraph inds extrap sharex sharey pidx */}\n",
     "\n",
     "# Utility-scale error mitigation with probabilistic error amplification\n",
-    "*Usage estimate: 16 minutes on ibm_kingston (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 16 minutes on ibm_kingston (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
