--- a/docs/tutorials/wire-cutting.ipynb
+++ b/docs/tutorials/wire-cutting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Wire cutting for expectation values estimation\n",
-    "*Usage estimate: 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
