--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -19,7 +19,7 @@
     "<Admonition type=\"note\" title=\"Note\">\n",
     "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
-    "*Usage estimate: 50 minutes on `ibm_kingston`. (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Usage estimate: 50 minutes on `ibm_kingston`. (NOTE: This is an estimate only. Your runtime might vary.)*\n",
     "\n",
     "Note that the execution time of this function is generally greater than 20 minutes,\n",
     "so you might want to split this tutorial in two sections: the first one, in which\n",
