--- a/docs/tutorials/combine-error-mitigation-techniques.ipynb
+++ b/docs/tutorials/combine-error-mitigation-techniques.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Combine error mitigation options with the Estimator primitive\n",
-    "*Usage estimate: 8 minutes on ibm_fez (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 8 minutes on ibm_fez (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
