--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -19,7 +19,7 @@
     "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
-    "*Usage estimate: Approximately 55 minutes on ibm_torino. (NOTE: This is an estimate only. Actual runtime may vary.)*"
+    "*Usage estimate: Approximately 55 minutes on ibm_torino. (NOTE: This is an estimate only. Actual runtime might vary.)*"
    ]
   },
   {
