--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -11,7 +11,7 @@
    },
    "source": [
     "# Repetition codes\n",
-    "*Usage estimate: less than 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Usage estimate: less than 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*\n",
     "\n",
     "## Background\n",
     "\n",
