--- a/docs/tutorials/variational-quantum-eigensolver.ipynb
+++ b/docs/tutorials/variational-quantum-eigensolver.ipynb
@@ -9,7 +9,7 @@
     "{/* cspell:ignore nfev */}\n",
     "\n",
     "# Variational quantum eigensolver\n",
-    "*Usage estimate: 73 minutes on ibm_kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 73 minutes on ibm_kyiv (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
