Remove some friendly "we"s

--- a/docs/tutorials/combine-error-mitigation-techniques.ipynb
+++ b/docs/tutorials/combine-error-mitigation-techniques.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, you'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. You will construct a circuit and observable and submit jobs using the Estimator primitive using different combinations of error mitigation settings. Then, you will plot the results to observe the effects of the various settings. Most of the tutorial uses a 10-qubit circuit to make visualizations easier, and at the end, you can scale up the workflow to 50 qubits.\n",
+    "This tutorial explores the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. You will construct a circuit and observable and submit jobs using the Estimator primitive using different combinations of error mitigation settings. Then, you will plot the results to observe the effects of the various settings. Most of the tutorial uses a 10-qubit circuit to make visualizations easier, and at the end, you can scale up the workflow to 50 qubits.\n",
     "\n",
     "These are the error suppression and mitigation options you will use:\n",
     "\n",
