--- a/docs/tutorials/long-range-entanglement.ipynb
+++ b/docs/tutorials/long-range-entanglement.ipynb
@@ -26,7 +26,7 @@
     "- a unitary-based implementation, which uses SWAP operations to reduce the distance between distant qubits and entangle them directly,\n",
     "- a measurement-based implementation with dynamic circuits, which uses measurement and feedforward of information during the quantum computation to entangle the qubits.\n",
     "In particular, the results show the effectiveness of dynamic circuits in generating long-range entanglement between two unconnected qubits at utility scales.\n",
-    "The notebook uses the ideas and results from [1] by Elisa Bäumer et al."
+    "The tutorial uses the ideas and results from [1] by Elisa Bäumer et al."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "source": [
     "### Experimental setup\n",
     "\n",
-    "The experiments in this notebook use a 1-D line of qubits with a coupling map that ensures that no shortcuts can be taken."
+    "The experiments in this tutorial use a 1-D line of qubits with a coupling map that ensures that no shortcuts can be taken."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "id": "b00af850-c30b-44c8-b40c-e0c6642ceb24",
    "metadata": {},
    "source": [
-    "We will describe the line as a simple list of integer indices. In this tutorial, we will choose a random qubit line using the following function."
+    "We will describe the line as a simple list of integer indices. In this tutorial, we will choose a random qubit line by using the following function."
    ]
   },
   {
