--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -9,7 +9,7 @@
     "{/* cspell:ignore fontsize */}\n",
     "\n",
     "# Qiskit AI-powered transpiler service introduction\n",
-    "*Estimated QPU usage: None (NOTE: no execution was done in this notebook as notebook is focused on the transpilation process)*\n",
+    "*Estimated QPU usage: None (NOTE: This tutorial does not execute jobs because it is focused on transpilation)*\n",
     "\n",
     "## Background\n",
     "\n",
@@ -29,7 +29,7 @@
     "- Comparison with traditional transpilation: The standard Qiskit transpiler is a robust tool that can handle a broad spectrum of quantum circuits effectively. However, when circuits grow larger in scale or hardware configurations become more complex, QTS can deliver additional optimization gains. By using learned models for routing and synthesis, QTS further refines circuit layouts and reduces overhead for challenging or large-scale quantum tasks.\n",
     "\n",
     "\n",
-    "In this tutorial, we will evaluate the AI modes using both routing and synthesis passes, comparing the results to traditional transpilation to highlight where AI offers performance gains.\n",
+    "This tutorial evaluates the AI modes using both routing and synthesis passes, comparing the results to traditional transpilation to highlight where AI offers performance gains.\n",
     "\n",
     "For more details about QTS, refer to the [AI transpiler passes](/docs/guides/ai-transpiler-passes) topic.\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "In benchmarking tests, QTS consistently produced shallower, higher-quality circuits compared to the standard Qiskit transpiler. For these tests, we used Qiskit’s default pass manager strategy, configured with [`generate_preset_passmanager`](/docs/api/qiskit/transpiler_preset). While this default strategy is often effective, it can struggle with larger or more complex circuits. By contrast, QTS’s AI-powered passes achieved an average 24% reduction in two-qubit gate counts and a 36% reduction in circuit depth for large circuits (100+ qubits) when transpiling to the heavy-hex topology of IBM Quantum&reg; hardware. For more information on these benchmarks, refer to this [blog.](https://www.ibm.com/quantum/blog/qiskit-performance)\n",
     "\n",
-    "In this notebook, we will explore the key benefits of QTS and how it compares to traditional methods."
+    "This tutorial explores the key benefits of QTS and how it compares to traditional methods."
    ]
   },
   {
