--- a/docs/tutorials/colibritd-pde.ipynb
+++ b/docs/tutorials/colibritd-pde.ipynb
@@ -55,7 +55,7 @@
     "necessary to know the initial and boundary conditions. These can strongly\n",
     "change the solution of the PDE and the path to find their solution.\n",
     "\n",
-    "In this tutorial, you will learn how to:\n",
+    "This tutorial teaches you how to:\n",
     "\n",
     "1. Define the parameters of the initial condition function.\n",
     "2. Adjust the qubit number (used to encode the function of the differential equation), depth, and shot number.\n",
@@ -148,7 +148,7 @@
     "inviscid description of the problem can be useful. Surprisingly, more than\n",
     "70% of aerodynamic theory deals with inviscid flows.\n",
     "\n",
-    "In this tutorial we offer the inviscid Burgers' equation as a CFD example to solve\n",
+    "This tutorial uses the inviscid Burgers' equation as a CFD example to solve\n",
     "on IBM&reg; QPUs using QUICK-PDE, given by the equation:\n",
     "$$\\frac{\\partial u}{\\partial t} + u\\frac{\\partial u}{\\partial x} = 0, $$\n",
     "\n",
