--- a/docs/tutorials/operator-back-propagation.ipynb
+++ b/docs/tutorials/operator-back-propagation.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "In the above example, if $\\{P,P_s\\} = 0$, then we need to execute two quantum circuits, instead of one, to calculate the expectation value. Therefore, backpropagation may increase the number of terms in the observable, leading to higher number of circuit execution. One way to allow for deeper backpropagation into the circuit, while preventing the operator from growing too large, is to truncate terms with small coefficients, rather than adding them to the operator. For instance, in the above example, one may choose to truncate the term involving $P_sP$ provided that $\\theta_s$ is sufficiently small. Truncating terms can result in fewer quantum circuits to execute, but doing so results in some error in the final expectation value calculation proportional to the magnitude of the truncated terms' coefficients.\n",
     "\n",
-    "In this tutorial we will implement a [Qiskit pattern](/docs/guides/intro-to-patterns) for simulating the quantum dynamics of a Heisenberg spin chain using <a href=\"https://github.com/Qiskit/qiskit-addon-obp\">qiskit-addon-obp</a>."
+    "This tutorial implements a [Qiskit pattern](/docs/guides/intro-to-patterns) for simulating the quantum dynamics of a Heisenberg spin chain using <a href=\"https://github.com/Qiskit/qiskit-addon-obp\">qiskit-addon-obp</a>."
    ]
   },
   {
