--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "## Post-course survey\n",
     "\n",
-    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cJ5L6VECIM7rwCG). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cJ5L6VECIM7rwCG). Your feedback will be used to enhance our content offering and user experience. Thank you!"
    ]
   }
  ],
