Remove cells with marking, other trademark cleanup (#3622)
Closes #3379 

Marks the first instance of registered tms IBM, IBM Cloud, IBM Quantum,
IBM Quantum Safe (still tm), and IBM Research on a page.
Also eliminates putting possessives on these names when possible.
Some minor typo catches, like replacing "may with "might", and removing
an unneeded quotation mark that got copied/pasted throughout many files

---------

Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "* Qiskit SDK v1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
     "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
-    "* Qiskit IBM Transpiler (`pip install qiskit-ibm-transpiler`)\n",
+    "* Qiskit IBM&reg; Transpiler (`pip install qiskit-ibm-transpiler`)\n",
     "* Qiskit IBM AI Local Transpiler (`pip install qiskit_ibm_ai_local_transpiler`)"
    ]
   },
@@ -1093,14 +1093,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_0igXMtMCQfApgDI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a76ce81d-7d92-42be-a2fc-bf4ef98c1ac2",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2025"
    ]
   }
  ],
