--- a/docs/tutorials/approximate-quantum-compilation-for-time-evolution.ipynb
+++ b/docs/tutorials/approximate-quantum-compilation-for-time-evolution.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Approximate quantum compilation for time evolution circuits\n",
-    "*Usage estimate: 5 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 5 minutes on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -1851,14 +1851,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_eF01c2sfeSt6cqq)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07d2d65e-d1cf-433a-a1a4-31976c5733d1",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2025"
    ]
   }
  ],
