--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Grover's algorithm\n",
-    "*Usage estimate: under 1 minute on IBM Nairobi (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: under 1 minute on ibm_nairobi (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -367,14 +367,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_0j1SlLPkooyeFJY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fd6d2f21",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2023"
    ]
   }
  ],
