--- a/docs/tutorials/operator-back-propagation.ipynb
+++ b/docs/tutorials/operator-back-propagation.ipynb
@@ -8,7 +8,7 @@
     "{/* cspell:ignore simeq  // This in an equation and isn't being ignored correctly */}\n",
     "\n",
     "# Operator backpropagation (OBP) for estimation of expectation values\n",
-    "*Usage estimate: 16 minutes on IBM Nazca (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 16 minutes on ibm_nazca (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "source": [
     "#### Now that we have our reduced ansatz and expanded observables, we can transpile our experiments to the backend.\n",
     "\n",
-    "Here we will use a 127-qubit IBM Quantum hardware to demonstrate how to transpile to a QPU backend."
+    "Here we will use a 127-qubit IBM&reg; quantum computer to demonstrate how to transpile to a QPU backend."
    ]
   },
   {
@@ -1298,14 +1298,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_6LpyEKfDKBjqsWW)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0795232a",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024"
    ]
   }
  ],
