--- a/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
+++ b/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
@@ -20,7 +20,7 @@
     "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
-    "*Usage estimate: 24 minutes on ibm\\_fez. (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 24 minutes on ibm\\_fez. (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "id": "df157bba",
    "metadata": {},
    "source": [
-    "Define your [IBM Quantum&reg; Platform](https://quantum.cloud.ibm.com/) credentials, which will be used throughout the tutorial to authenticate to Qiskit Runtime and Qiskit Functions."
+    "Define your [IBM Quantum Platform](https://quantum.cloud.ibm.com/) credentials, which will be used throughout the tutorial to authenticate to Qiskit Runtime and Qiskit Functions."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "id": "6c9bffae",
    "metadata": {},
    "source": [
-    "The Optimization Solver accepts either an objective function or a graph as input. In this tutorial, the Ising spin glass minimization problem is defined as an objective function, and it has been tailored for the heavy-hex topology of IBM devices.\n",
+    "The Optimization Solver accepts either an objective function or a graph as input. In this tutorial, the Ising spin glass minimization problem is defined as an objective function, and it has been tailored for the heavy-hex topology of IBM&reg; devices.\n",
     "\n",
     "Because this objective function contains cubic, quadratic, and linear terms, it falls into the HOBO class of problems, known to be considerably more complicated to solve than conventional quadratic unconstrained binary optimization (QUBO) problems.\n",
     "\n",
