--- a/docs/tutorials/wire-cutting.ipynb
+++ b/docs/tutorials/wire-cutting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Wire cutting for expectation values estimation\n",
-    "*Usage estimate: 1 minute on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -1256,14 +1256,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_3BLFkNVEuh0QBWm)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c38b07a",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024, 2025"
    ]
   }
  ],
