--- a/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
+++ b/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Circuit cutting for depth reduction\n",
-    "*Usage estimate: 8 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 8 minutes on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -435,14 +435,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_2ftYFf9t72yFNIO)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f4233ea",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024"
    ]
   }
  ],
