--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "# Quantum approximate optimization algorithm\n",
-    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 8 minutes on ibm_sherbrooke (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
@@ -823,7 +823,7 @@
    "source": [
     "## Part II. scale it up!\n",
     "\n",
-    "You have access to many devices with over 100 qubits on IBM Quantum Platform. Select one on which to solve Max-Cut on a 100-node weighted graph. This is a \"utility-scale\" problem. The steps to build the workflow are followed the same as above, but with a much larger graph."
+    "You have access to many devices with over 100 qubits on IBM Quantum&reg; Platform. Select one on which to solve Max-Cut on a 100-node weighted graph. This is a \"utility-scale\" problem. The steps to build the workflow are followed the same as above, but with a much larger graph."
    ]
   },
   {
@@ -1376,14 +1376,6 @@
     "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cNHi0H1YIagQZ9Q)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b0c98b33",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2024"
    ]
   }
  ],
