--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -20,7 +20,7 @@
     "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
-    "*Usage estimate (NOTE: This is an estimate only. Your runtime may vary.)*\n",
+    "*Usage estimate (NOTE: This is an estimate only. Your runtime might vary.)*\n",
     "\n",
     "* Li2S: 5 minutes QPU time on `ibm_marrakesh`\n",
     "* FeP-NO: 5 minutes QPU time on `ibm_marrakesh`"
@@ -68,7 +68,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "To run this tutorial, import `qunova/hivqe-chemistry` function via `QiskitFunctionCatalog`. You need an IBM Quantum® Premium Plan account with a license from Qunova to run this function."
+    "To run this tutorial, import `qunova/hivqe-chemistry` function via `QiskitFunctionCatalog`. You need an IBM Quantum Premium Plan, Flex Plan, or On-Prem (IBM Quantum Platform API) Plan account with a license from Qunova to run this function."
    ]
   },
   {
