--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "### Protein folding\n",
     "\n",
-    "Next, let’s explore an example modeled in the [paper](https://arxiv.org/abs/1908.02163) called \"Resource-efficient quantum algorithm for protein folding,\" written by IBM and collaborators at University of New South Wales.\n",
+    "Next, let’s explore an example modeled in the [paper](https://arxiv.org/abs/1908.02163) called \"Resource-efficient quantum algorithm for protein folding,\" written by IBM&reg; and collaborators at University of New South Wales.\n",
     "\n",
     "A little biochemistry background: Proteins are macromolecules composed of long chains of amino acids. These chains fold into complex structures that perform a wide variety of biological functions. Determining a protein’s structure in three-dimensional space, and understanding the relationships between structure and function, are among the most challenging problems in biochemistry today. Proteins fold into useful structures due to interactions between amino acids. As a structure twists and folds, amino acids that are far from each other along the chain may end up right next to each other and may interact strongly.\n",
     "\n",
@@ -229,7 +229,7 @@
    "source": [
     "## Post-course survey\n",
     "\n",
-    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cLU5FElCNVJOhfw). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cLU5FElCNVJOhfw). Your feedback will be used to enhance our content offering and user experience. Thank you!"
    ]
   }
  ],
