What the heck are notebooks? (#3634)
Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, we will show how to build a `Qiskit pattern` for evaluating entries into a quantum kernel matrix used for binary classification. For more information on `Qiskit patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on IBM Quantum&reg; Platform](/docs/guides/serverless)."
+    "This tutorial shows how to build a `Qiskit pattern` for evaluating entries into a quantum kernel matrix used for binary classification. For more information on `Qiskit patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on IBM Quantum&reg; Platform](/docs/guides/serverless)."
    ]
   },
   {
