--- a/docs/tutorials/spin-chain-vqe.ipynb
+++ b/docs/tutorials/spin-chain-vqe.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, we will show how to build, deploy, and run a `Qiskit pattern` for simulating a Heisenberg chain and estimating its ground state energy. For more information on `Qiskit patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on the IBM Quantum&reg; Platform](/docs/guides/serverless)."
+    "This tutorial shows how to build, deploy, and run a `Qiskit pattern` for simulating a Heisenberg chain and estimating its ground state energy. For more information about `Qiskit patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on IBM Quantum&reg; Platform](/docs/guides/serverless)."
    ]
   },
   {
