Use command to view available QPUs (#3583)
closes #3537 

Most of the changes are here:
https://qiskit.github.io/documentation/pr-3583/docs/guides/get-qpu-information

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -44,7 +44,11 @@
    "source": [
     "## List backends\n",
     "\n",
-    "To view the backends you have access to, you can either view a list on the [Compute resources page,](https://quantum.cloud.ibm.com/computers) or you can use the [`QiskitRuntimeService.backends()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) method. This method returns a list of [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instances:"
+    "To view the backends you have access to, you can either view a list on the [Compute resources page,](https://quantum.cloud.ibm.com/computers) or you can use the [`QiskitRuntimeService.backends()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) method. This method returns a list of [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instances:\n",
+    "\n",
+    "<Admonition type=\"note\">\n",
+    "If you are logged in to a specific instance or region, or if you initialized the service with a specific instance or region by using `QiskitRuntimeService()`, only the backends available to you on that instance or region are returned.\n",
+    "</Admonition>"
    ]
   },
   {
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b169fd5c-5132-47ed-9baf-eecd37f8f668",
    "metadata": {},
    "outputs": [
@@ -127,7 +131,7 @@
     "\n",
     "You can also filter the available backends by their properties. For more general filters, set the `filters` argument to a function that accepts a backend object and returns `True` if it meets your criteria. Refer to the [API documentation](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) for more details.\n",
     "\n",
-    "The following code returns only backends that fit these criteria:\n",
+    "The following code returns only backends that fit these criteria and are available to you _on your currently selected instance_:\n",
     "\n",
     "*   Are real quantum devices (`simulator=False`)\n",
     "*   Are currently operational (`operational=True`)\n",
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cc7b0879-feaa-42da-955a-775b456198a1",
    "metadata": {},
    "outputs": [
@@ -159,6 +163,10 @@
     }
    ],
    "source": [
+    "# Optionally pass in an instance, region, or both, to\n",
+    "# further filter the backends.\n",
+    "service = QiskitRuntimeService()\n",
+    "\n",
     "service.backends(simulator=False, operational=True, min_num_qubits=5)"
    ]
   },
