--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -11,7 +11,7 @@ If you have an invitation to join an account, follow the steps in [Set up your I
 
 You can run workloads on IBM&reg; quantum processing units (QPUs) by setting up an account on IBM Cloud&reg;. You will also need to [install and set up Qiskit and Qiskit Runtime](/docs/guides/install-qiskit#local).
 
-Your user account is associated with one or more [instances](./instances), identified by _Cloud Resource Names_ (CRNs) that give access to IBM Quantum services. Additionally, a unique API token (also called a key) is assigned to each account, allowing for IBM Quantum access from Qiskit.  For instructions to choose a specific instance, see [Connect to an instance](./instances#connect-instance).
+Your user account is associated with one or more [instances,](./instances) identified by _Cloud Resource Names_ (CRNs) that give access to IBM Quantum services. Additionally, a unique API token (also called a key) is assigned to each account, allowing for IBM Quantum access from Qiskit.  For instructions to choose a specific instance, see [Connect to an instance](./instances#connect-instance).
 
     <Admonition type="note">
       The [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com) and the [Instances page](https://quantum.cloud.ibm.com/instances) list the instances that you can access.
@@ -83,7 +83,7 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
   from qiskit_ibm_runtime import QiskitRuntimeService
   service = QiskitRuntimeService.save_account(
     token=token, # Your token is confidential.
-    # Do not share your key in public code.
+    # Do not share your token in public code.
     instance="<IBM Cloud CRN or instance name>", # Optionally specify the instance to use.
     plans_preference="['plan-type1', 'plan-type2']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
     region="<region>", # Optionally set the region to prioritize. This is ignored if the instance is specified.
@@ -117,6 +117,7 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
 <Admonition type="tip" title="Recommendations">
   -  [Overview of available plans.](plans-overview)
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
+  -  [View your available QPUs.](/docs/guides/qpu-information#available)
   -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
   -  [Set up to use IBM Quantum Platform with REST API.](/docs/guides/cloud-setup-rest-api)
   -  Try a [tutorial](/docs/tutorials).
