Remove vqe tutorial, replace with spin-chain-vqe

--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "We recommend planning to devote approximately 6-10 hours to the completion of this course. The videos and reading are likely to take two hours to complete. The remaining time is for executing and modifying code cells, completing quiz questions, and reading linked documentation.\n",
     "\n",
-    "IBM Quantum&reg; has other upskilling offerings related to VQE. If you are already familiar with the components of VQE and simply wish to put it into practice, see our tutorial: [Variational Quantum Eigensolver](/docs/tutorials/variational-quantum-eigensolver).\n",
+    "IBM Quantum&reg; has other upskilling offerings related to VQE. If you are already familiar with the components of VQE and simply wish to put it into practice, see our tutorial: [Ground-state energy estimation of the Heisenberg chain with VQE](/docs/tutorials/spin-chain-vqe).\n",
     "\n",
     "## Overview of VQE\n",
     "\n",
