Numerals bad.  Numbers good.

--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2c462d48-ae45-4528-9b09-cebc869a6812",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
     "import time\n",
     "\n",
     "\n",
-    "# Used for generating permutation circuits in part 2 for comparison\n",
+    "# Used for generating permutation circuits in part two for comparison\n",
     "def generate_permutation_circuit(width, pattern):\n",
     "    circuit = QuantumCircuit(width)\n",
     "    circuit.append(\n",
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "72ee8474-eea6-421a-9d7d-070587eaff71",
    "metadata": {},
    "outputs": [
@@ -897,7 +897,7 @@
     "average_metrics = results_df.groupby(\"Method\")[\n",
     "    [\"Depth\", \"Gates(2q)\", \"Time (s)\"]\n",
     "].mean()\n",
-    "average_metrics = average_metrics.round(2)  # Round to 2 decimal places\n",
+    "average_metrics = average_metrics.round(2)  # Round to two decimal places\n",
     "print(\"\\n=== Average Metrics ===\")\n",
     "print(average_metrics)\n",
     "\n",
