--- a/docs/tutorials/circuit-transpilation-settings.ipynb
+++ b/docs/tutorials/circuit-transpilation-settings.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Compare transpiler settings\n",
-    "*Usage estimate: under 1 minute on ibm_nazca (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: under one minute on ibm_nazca (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
