--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -22,8 +22,8 @@
     "\n",
     "*Usage estimate (NOTE: This is an estimate only. Your runtime might vary.)*\n",
     "\n",
-    "* Li2S: 5 minutes QPU time on `ibm_marrakesh`\n",
-    "* FeP-NO: 5 minutes QPU time on `ibm_marrakesh`"
+    "* Li2S: Five minutes QPU time on `ibm_marrakesh`\n",
+    "* FeP-NO: Five minutes QPU time on `ibm_marrakesh`"
    ]
   },
   {
