--- a/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
+++ b/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
@@ -8,7 +8,7 @@
     "{/* cspell:ignore edgecolor */}\n",
     "\n",
     "# Transpilation Optimizations with SABRE\n",
-    "*Usage estimate: under 1 minute on ibm_kingston (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: under one minute on ibm_kingston (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
