--- a/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
+++ b/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Circuit cutting for depth reduction\n",
-    "*Usage estimate: 8 minutes on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: Eight minutes on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
