--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Grover's algorithm\n",
-    "*Usage estimate: under 1 minute on ibm_nairobi (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: under one minute on ibm_nairobi (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
