--- a/docs/tutorials/probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/probabilistic-error-amplification.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "795e151a-a4d9-44ea-b349-b10256663611",
    "metadata": {},
    "outputs": [],
@@ -286,10 +286,10 @@
     "    *couplings: Sequence[tuple[int, int]],\n",
     "    allowed_qubits: Sequence[int] | None = None,\n",
     ") -> list[int]:\n",
-    "    \"\"\"Return a sorted list of all qubits involved in 1 or more couplings lists.\n",
+    "    \"\"\"Return a sorted list of all qubits involved in one or more couplings lists.\n",
     "\n",
     "    Args:\n",
-    "        couplings: 1 or more coupling lists.\n",
+    "        couplings: one or more coupling lists.\n",
     "        allowed_qubits: Optional, the allowed qubits to include. If None all\n",
     "            qubits are allowed.\n",
     "\n",
