--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -566,7 +566,7 @@
     "    \"counts\"\n",
     "]  # List of corresponding objective function values (costs)\n",
     "\n",
-    "# Round costs to 1 decimal and accumulate counts for each unique cost\n",
+    "# Round costs to one decimal and accumulate counts for each unique cost\n",
     "dpo_counter = defaultdict(int)\n",
     "for cost, count in zip(cost_list, counts_list):\n",
     "    rounded_cost = round(cost, 1)\n",
