--- a/docs/tutorials/operator-back-propagation.ipynb
+++ b/docs/tutorials/operator-back-propagation.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "#### Backpropagate slices from the circuit\n",
     "\n",
-    "First we specify the observable to be $M_Z = \\frac{1}{N} \\sum_{i=1}^N \\langle Z_i \\rangle$, $N$ being the number of qubits. We will backpropagate slices from the time-evolution circuit until the terms in the observable can no longer be combined into 8 or fewer qubit-wise commuting Pauli groups."
+    "First we specify the observable to be $M_Z = \\frac{1}{N} \\sum_{i=1}^N \\langle Z_i \\rangle$, $N$ being the number of qubits. We will backpropagate slices from the time-evolution circuit until the terms in the observable can no longer be combined into eight or fewer qubit-wise commuting Pauli groups."
    ]
   },
   {
